# taskflow-naren

./: .db-remote-url  .gitignore  Makefile  README.md  docker-compose.yml
backend/: README.md  docker-compose.yml
backend/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/api/taskflow_api/: config.py  dependencies.py  main.py  sse.py
backend/api/taskflow_api/middleware/: logging.py
backend/api/taskflow_api/routes/: auth.py  events.py  projects.py  tasks.py  users.py
backend/api/taskflow_api/schemas/: __init__.py  auth.py  common.py  project.py  task.py
backend/api/tests/: conftest.py  test_auth.py  test_events.py  test_sse.py  test_tasks.py  test_users.py
backend/common/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/common/migrations/: env.py
backend/common/migrations/versions/: bb53a1fe1696_added_theme_to_be_persisted.py  e535ec00124a_initial_models.py
backend/common/seeds/: seed.py
backend/common/taskflow_common/: __init__.py  config.py  database.py
backend/common/taskflow_common/models/: __init__.py  project.py  task.py  user.py
backend/common/taskflow_common/utils/: __init__.py  security.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: store.ts
frontend/src/components/: ConfirmDialog.tsx  EmptyState.tsx  Navbar.tsx  ProtectedRoute.tsx  TaskModal.tsx
frontend/src/hooks/: useProjectSSE.ts
frontend/src/lib/: utils.ts
(+16 files in other folders)
