[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskflow-api"
version = "0.1.0"
description = "REST API service for TaskFlow"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic[email]>=2.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "taskflow-common",
]

[tool.uv.sources]
taskflow-common = { path = "../common", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "anyio>=4.0",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["taskflow_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["taskflow_api"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
